# smfeval

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  SQUARE_spec.md  flake.nix  pyproject.toml  smfeval-spec.md  smfeval_spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: publish.yml  test.yml
docs/: Makefile  alignment.rst  api.rst  calibration.rst  conf.py  diagnostics.rst  index.rst  metrics.rst  proper_scores.rst  report.schema.json
docs/_static/: custom.css  force-light.js
exporters/: README.md
exporters/fast_lio2/: UPSTREAM  VALIDATION.md  bag_to_square.py  belief-publisher.patch
exporters/faster_lio/: UPSTREAM  VALIDATION.md  bag_to_square.py  belief-publisher.patch
exporters/i2ekf_lo/: UPSTREAM  VALIDATION.md  bag_to_square.py  belief-publisher.patch
exporters/point_lio/: UPSTREAM  VALIDATION.md  bag_to_square.py  belief-publisher.patch
notebooks/: figure1_verdict.ipynb  figure1_verdict.py  figure_overconfidence.py
notebooks/data/: README.md
optim_traj/: README.md  factor_graph.py  letters.py  main.py  se3.py  sensor.py  tsp.py
plans/: 0.4-distributional-gt.md  0.4-relative-crps.md  0.5-distributional-gt.md  0.5-distributional-ref.md
scripts/: check_exporters.py  diagnose_rotation_alignment.py  make_regression_fixtures.py
smfeval/: __init__.py
smfeval/align/: __init__.py  fit.py  propagate.py
smfeval/cli/: __init__.py  main.py
smfeval/io/: __init__.py  header.py  load.py  reader.py  triangular.py  writer.py
smfeval/report/: __init__.py  builder.py  diagnostics.py  recommendations.py  text.py  verdict.py
smfeval/scoring/: __init__.py  _kernel.py  _predictive.py  bias_variance.py  calibration.py  crps.py  energy.py  ensemble_diag.py  gaussian_diag.py  interval.py  logscore.py  pairwise.py  relative.py  summary.py
smfeval/se3/: __init__.py  lie.py  quat.py  tangent.py
smfeval/sync/: __init__.py  interpolate.py  match.py  mode.py  risk.py
src/: __init__.py  format.py  steps.py  types.py
src/align/: __init__.py  fit.py  propagate.py
src/cli/: __init__.py  main.py
src/io/: __init__.py  header.py  load.py  reader.py  writer.py
src/report/: __init__.py  builder.py  diagnostics.py  recommendations.py  text.py
src/scoring/: __init__.py  _kernel.py  _predictive.py  bias_variance.py  calibration.py  crps.py  energy.py  ensemble_diag.py  gaussian_diag.py  interval.py  logscore.py  relative.py  summary.py
src/se3/: __init__.py  lie.py  quat.py  tangent.py
src/sync/: __init__.py  interpolate.py  match.py  mode.py  risk.py
tests/: _strategies.py  conftest.py  test_align.py  test_bias_variance.py  test_calibration_split.py  test_cli.py  test_diagnostics.py  test_escape_hatch.py  test_header.py  test_interpolate.py  test_io_rows.py  test_notebook_consistency.py  test_pairwise.py  test_power.py  test_properties.py  test_regression.py  test_relative.py  test_report_schema.py  test_scoring.py  test_se3.py  test_summary.py  test_sync.py
tests/fixtures/regression/: DATA_LICENSE.md
tests/fixtures/regression/det_smoke/: args.json  est.smfeval  expected_report.json  ref.tum
tests/fixtures/regression/pair_smoke/: PROVENANCE  a.smfeval  args.json  expected_report.json
tests/fixtures/regression/real_fast_lio2/: PROVENANCE  args.json  est.smfeval  expected_report.json
tests/fixtures/regression/real_faster_lio/: PROVENANCE  args.json  est.smfeval  expected_report.json  ref.tum
tests/fixtures/regression/real_i2ekf_lo/: PROVENANCE  args.json  est.smfeval  expected_report.json
tests/fixtures/regression/real_point_lio/: PROVENANCE  args.json  est.smfeval  expected_report.json  gt.tum  imu_to_lidar.json
