[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smfeval"
version = "0.2.0"
description = "Probabilistic SLAM trajectory format and scoring tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
authors = [{ name = "Ola Rønning", email = "oroe@itu.dk" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/svendbot/smfeval"

[dependency-groups]
dev = [
    "pytest",
    "hypothesis",
    "matplotlib",
    "pandas",
    "pyyaml",
    "natsort",
    "colorama",
    "pygments",
]

[project.scripts]
smfeval = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
