[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smfeval"
version = "0.3.0"
description = "Probabilistic SLAM trajectory format and scoring tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
authors = [{ name = "Ola Rønning", email = "oroe@itu.dk" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/svendbot/smfeval"

[dependency-groups]
dev = [
    "pytest",
    "hypothesis",
    "matplotlib",
    "pandas",
    "pyyaml",
    "natsort",
    "colorama",
    "pygments",
    "brotli>=1.2.0",
]
docs = [
    "sphinx>=7",
    "furo",
]

[project.scripts]
smfeval = "smfeval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["smfeval"]

[tool.pyright]
include = ["smfeval", "tests"]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with -m 'not slow')",
]

[tool.ruff]
# Google Python Style Guide: 80-char lines, Py3.10 target. Indent width
# is 2 (project preference) rather than the PSG default of 4.
line-length = 80
indent-width = 2
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import order)
    "D",   # pydocstyle (Google convention enforced below)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    # Formatter already enforces 80-char lines; remaining E501 hits are
    # long output strings / docstrings the formatter cannot safely break.
    # Google PSG documents this as an accepted exception.
    "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false
